feat: Added e2e tests for vite-react-simple sample

--- a/vite-react-simple/package.json
+++ b/vite-react-simple/package.json
@@ -8,7 +8,7 @@
   ],
   "version": "0.0.0",
   "scripts": {
-    "start": "concurrently \"yarn --cwd vite-react start\" \"yarn --cwd webpack-spa start\" \"cd rs-sidecar; yarn start\""
+    "start": "concurrently \"yarn --cwd vite-react start\" \"yarn --cwd webpack-spa start\" \"cd rs-sidecart; yarn start\""
   },
   "devDependencies": {
     "concurrently": "7.3.0"
