--- a/nextjs-ssr/shop/package.json
+++ b/nextjs-ssr/shop/package.json
@@ -8,13 +8,13 @@
     "start": "NODE_ENV=production next start -p 3002"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "5.11.5",
+    "@module-federation/nextjs-mf": "6.0.7",
     "lodash": "4.17.21",
     "next": "12.2.2",
-    "next-compose-plugins": "^2.2.1",
+    "next-compose-plugins": "2.2.1",
     "nextjs-shared": "file:../shared",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "webpack": "5.72.1",
     "webpack-merge": "^5.8.0"
   }
