update: nextjs-ssr sample

--- a/nextjs-ssr/shared/package.json
+++ b/nextjs-ssr/shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-shared",
+  "name": "nextjs-ssr_shared",
   "version": "1.0.0",
   "license": "MIT",
   "module": "./index.js",
