--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
       "./nested/*",
       "./nextjs-react",
       "./nextjs-react/*",
+      "./nextjs-ssr",
+      "./nextjs-ssr/*",
       "./react-hmr",
       "./react-hmr/*",
       "./react-in-vue",
