--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "cross-spawn": "7.0.3",
     "cypress": "10",
     "cypress-fill-command": "1.0.2",
+    "cypress-real-events": "1.7.6",
     "cypress-wait-until": "1.7.2",
     "forever": "4.0.3",
     "husky": "7.0.4",
