fix: fix samples tests

--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
       "./different-react-versions-isolated/*",
       "./dynamic-system-host",
       "./dynamic-system-host/*",
+      "./genesis",
+      "./genesis/*",
       "./native-federation-react",
       "./native-federation-react/*",
       "./nested",
@@ -104,7 +106,6 @@
       "./dashboard-example/*",
       "./nextjs-bi-directional/*",
       "./vue-cli/*",
-      "./genesis/*",
       "./cypress"
     ],
     "nohoist": [
