add: command for run angular11-microfrontends samples on ci

--- a/angular11-microfrontends-ngrx/package.json
+++ b/angular11-microfrontends-ngrx/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-microfrontends",
+  "name": "angular11-microfrontends-ngrx",
   "private": true,
   "workspaces": [
     "./projects/*"
