--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
       "./advanced-api/dynamic-remotes-synchronous-imports/*",
       "./angular-universal-ssr",
       "./angular-universal-ssr/*",
+      "./angular11-microfrontends-ngrx",
+      "./angular11-microfrontends-ngrx/*",
+      "./angular11-microfrontends-ngxs",
+      "./angular11-microfrontends-ngxs/*",
+      "./angular11-microfrontends-scully",
+      "./angular11-microfrontends-scully/*",
       "./angular12-microfrontends",
       "./angular14-react",
       "./angular14-react/*",
