--- a/angular11-microfrontends-scully/package.json
+++ b/angular11-microfrontends-scully/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-microfrontends",
+  "name": "angular11-microfrontends-scully",
   "private": true,
   "workspaces": [
     "./projects/*"
