--- a/nextjs-ssr-delegate-modules/home/package.json
+++ b/nextjs-ssr-delegate-modules/home/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001",
+    "dev": "rm -rf .next && next dev -p 3001",
     "build": "next build",
     "start": "NODE_ENV=production next start -p 3001"
   },
