--- a/nextjs-ssr-delegate-modules/package.json
+++ b/nextjs-ssr-delegate-modules/package.json
@@ -13,5 +13,10 @@
   },
   "dependencies": {
     "concurrently": "^7.0.0"
+  },
+  "resolutions": {
+    "@module-federation/nextjs-mf": "file:../../nextjs-mf/dist/packages/nextjs-mf",
+    "@module-federation/utilities": "file:../../nextjs-mf/dist/packages/utilities",
+    "@module-federation/node": "file:../../nextjs-mf/dist/packages/node"
   }
 }
