add: cra sample to ci

--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
       "./comprehensive-demo-react16/*",
       "./comprehensive-demo-react18",
       "./comprehensive-demo-react18/*",
+      "./cra",
+      "./cra/*",
       "./css-isolation",
       "./css-isolation/*",
       "./different-react-versions",
@@ -122,6 +124,7 @@
     "cypress": "10",
     "cypress-fill-command": "^1.0.2",
     "cypress-wait-until": "1.7.2",
+    "forever": "4.0.3",
     "husky": "7.0.4",
     "jest": "26.6.3",
     "lerna": "6.4.1",
