add: delegate modules & federated npm to index; refactor: delegate modules & federated npm samples

--- a/delegate-modules/app2/package.json
+++ b/delegate-modules/app2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@deletages/app2",
+  "name": "delegate-modules_app2",
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
