--- a/delegate-modules/app1/package.json
+++ b/delegate-modules/app1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@deletages/app1",
+  "name": "delegate-modules_app1",
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
