--- a/package.json
+++ b/package.json
@@ -43,12 +43,16 @@
       "./comprehensive-demo-react18/*",
       "./css-isolation",
       "./css-isolation/*",
+      "./delegate-modules",
+      "./delegate-modules/*",
       "./different-react-versions",
       "./different-react-versions/*",
       "./different-react-versions-isolated",
       "./different-react-versions-isolated/*",
       "./dynamic-system-host",
       "./dynamic-system-host/*",
+      "./federated-npm",
+      "./federated-npm/*",
       "./native-federation-react",
       "./native-federation-react/*",
       "./nested",
