--- a/package.json
+++ b/package.json
@@ -99,6 +99,8 @@
       "./vue3-demo/*",
       "./third-party-scripts/*",
       "./typescript/*",
+      "./typescript-monorepo",
+      "./typescript-monorepo/*",
       "./nextjs-sidecar/*",
       "./dashboard-example/*",
       "./nextjs-bi-directional/*",
