add: vite & typescript samples to index

--- a/vite-react-simple/rs-sidecart/package.json
+++ b/vite-react-simple/rs-sidecart/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wp5-starter-react",
+  "name": "vite-react-simple_rs-sidecart",
   "version": "1.0.0",
   "scripts": {
     "build": "webpack --mode production",
