--- a/vite-react-simple/vite-react/package.json
+++ b/vite-react-simple/vite-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-react",
+  "name": "vite-react-simple_vite-react",
   "version": "0.0.0",
   "scripts": {
     "start": "nodemon serve.js",
