--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
       "./react-in-vue/*",
       "./react-nested-routers",
       "./react-nested-routers/*",
+      "./react-nextjs/nextjs-host-react-remote",
+      "./react-nextjs/nextjs-host-react-remote/*",
       "./react-nextjs/react-host-remote",
       "./react-nextjs/react-host-remote/*",
       "./redux-reducer-injection",
