add: vite & typescript samples to index (#2743)

--- a/package.json
+++ b/package.json
@@ -96,15 +96,21 @@
       "./version-discrepancy/*",
       "./vite-react-microfrontends",
       "./vite-react-microfrontends/*",
+      "./vite-react-simple",
+      "./vite-react-simple/*",
       "./vite-svelte-microfrontends",
       "./vite-svelte-microfrontends/*",
+      "./vite-vue-microfrontends",
+      "./vite-vue-microfrontends/*",
       "./vue2-in-vue3",
       "./vue2-in-vue3/*",
       "./vue3-demo-federation-with-vite",
       "./vue3-demo-federation-with-vite/*",
       "./vue3-demo",
       "./vue3-demo/*",
+      "./third-party-scripts",
       "./third-party-scripts/*",
+      "./typescript",
       "./typescript/*",
       "./nextjs-sidecar/*",
       "./dashboard-example/*",
