--- a/medusa-example/dsl/package.json
+++ b/medusa-example/dsl/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "@babel/core": "7.19.6",
     "@babel/preset-react": "7.18.6",
-    "@module-federation/dashboard-plugin": "2.7.0",
+    "@module-federation/dashboard-plugin": "2.6.5",
     "@webpack-cli/serve": "1.7.0",
     "babel-loader": "9.0.1",
     "css-loader": "6.7.3",
@@ -14,9 +14,9 @@
     "less-loader": "11.1.0",
     "serve": "14.0.1",
     "style-loader": "3.3.1",
-    "webpack": "^5.74.0",
+    "webpack": "5.74.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "4.11.1"
   },
   "scripts": {
     "start": "webpack-cli serve",
@@ -25,10 +25,10 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "@emotion/react": "^11.10.5",
-    "antd": "^4.24.0",
-    "lodash": "^4.17.21",
+    "@ant-design/icons": "4.7.0",
+    "@emotion/react": "11.10.5",
+    "antd": "4.24.0",
+    "lodash": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
