add: typescript-monorepo to index (#2742)

--- a/package.json
+++ b/package.json
@@ -114,6 +114,8 @@
       "./third-party-scripts/*",
       "./typescript",
       "./typescript/*",
+      "./typescript-monorepo",
+      "./typescript-monorepo/*",
       "./nextjs-sidecar/*",
       "./dashboard-example/*",
       "./nextjs-bi-directional/*",
