feat: add different-react-versions-typescript (#2745)
Co-authored-by: Bruno Silva <bruno3dcontato@gmail.com>

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
       "./delegate-modules/*",
       "./different-react-versions",
       "./different-react-versions/*",
+      "./different-react-versions-typescript/*",
       "./different-react-versions-isolated",
       "./different-react-versions-isolated/*",
       "./dynamic-system-host",
