--- a/.github/workflows/on-workflow-run.yml
+++ b/.github/workflows/on-workflow-run.yml
@@ -8,6 +8,9 @@ on:
     types:
       - completed
 
+env:
+  RUN_NUMBER: ${{ github.run_number }}
+
 jobs:
 
   stop-previous-run:
@@ -17,7 +20,6 @@ jobs:
         uses: styfle/cancel-workflow-action@0.11.0
         with:
           access_token: ${{ secrets.GITHUB_TOKEN }}
-
 
   generate-allure-report:
     runs-on: ubuntu-22.04
@@ -48,7 +50,7 @@ jobs:
       - run: unzip allure-results.zip
 
       - name: Get Allure history
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         if: always()
         continue-on-error: true
         with:
@@ -71,6 +73,7 @@ jobs:
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history
 
+  # Comment to PR
   comment-to-pr:
     runs-on: ubuntu-22.04
     needs: generate-allure-report
@@ -107,7 +110,7 @@ jobs:
           script: |
             const fs = require('fs');
             const issue_number = Number(fs.readFileSync('./prNum'));
-            const runNumber = Number(fs.readFileSync('./runNum'));
+            const runNumber = process.env.RUN_NUMBER;
             const runId = Number(fs.readFileSync('./runId'));
             const repoFullName = fs.readFileSync('./repoFullName');
             const ownerName = fs.readFileSync('./ownerName');
@@ -127,7 +130,7 @@ jobs:
           script: |
             const fs = require('fs');
             const issue_number = Number(fs.readFileSync('./prNum'));
-            const runNumber = Number(fs.readFileSync('./runNum'));
+            const runNumber = process.env.RUN_NUMBER;
             const runId = Number(fs.readFileSync('./runId'));
             const repoFullName = fs.readFileSync('./repoFullName');
             const ownerName = fs.readFileSync('./ownerName');
@@ -147,7 +150,7 @@ jobs:
           script: |
             const fs = require('fs');
             const issue_number = Number(fs.readFileSync('./prNum'));
-            const runNumber = Number(fs.readFileSync('./runNum'));
+            const runNumber = process.env.RUN_NUMBER;
             const runId = Number(fs.readFileSync('./runId'));
             const repoFullName = fs.readFileSync('./repoFullName');
             const ownerName = fs.readFileSync('./ownerName');
@@ -168,6 +171,7 @@ jobs:
           script: |
             const fs = require('fs');
             const issue_number = Number(fs.readFileSync('./prNum'));
+            const runNumber = process.env.RUN_NUMBER;
             github.rest.issues.addLabels({
               issue_number: issue_number,
               owner: context.repo.owner,
@@ -183,6 +187,7 @@ jobs:
           script: |
             const fs = require('fs');
             const issue_number = Number(fs.readFileSync('./prNum'));
+            const runNumber = process.env.RUN_NUMBER;
             github.rest.issues.addLabels({
               issue_number: issue_number,
               owner: context.repo.owner,
@@ -198,6 +203,7 @@ jobs:
           script: |
             const fs = require('fs');
             const issue_number = Number(fs.readFileSync('./prNum'));
+            const runNumber = process.env.RUN_NUMBER;
             github.rest.issues.addLabels({
               issue_number: issue_number,
               owner: context.repo.owner,
