feat: Add e2e tests for react-nextjs -> nextjs-host-react-remote sample (#2744)

--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
       "./react-in-vue/*",
       "./react-nested-routers",
       "./react-nested-routers/*",
+      "./react-nextjs/nextjs-host-react-remote",
+      "./react-nextjs/nextjs-host-react-remote/*",
       "./react-nextjs/react-host-remote",
       "./react-nextjs/react-host-remote/*",
       "./redux-reducer-injection",
@@ -137,6 +139,7 @@
     "cross-spawn": "7.0.3",
     "cypress": "10",
     "cypress-fill-command": "1.0.2",
+    "cypress-real-events": "1.7.6",
     "cypress-wait-until": "1.7.2",
     "forever": "4.0.3",
     "husky": "7.0.4",
