--- a/nextjs-ssr-delegate-modules/checkout/package.json
+++ b/nextjs-ssr-delegate-modules/checkout/package.json
@@ -8,14 +8,12 @@
     "start": "NODE_ENV=production next start"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "6.0.7",
-    "@module-federation/utilities": "^1.2.0",
+    "@module-federation/nextjs-mf": "6.1.1",
+    "@module-federation/utilities": "1.3.0",
     "lodash": "4.17.21",
     "next": "12.2.2",
-    "next-compose-plugins": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "webpack": "5.72.1",
-    "webpack-merge": "^5.8.0"
+    "webpack": "5.72.1"
   }
 }
