--- a/nextjs-ssr-delegate-modules/checkout/package.json
+++ b/nextjs-ssr-delegate-modules/checkout/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "nextjs-ssr_checkout",
+  "name": "delegate-checkout",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "rm -rf .next && next dev",
     "build": "next build",
     "start": "NODE_ENV=production next start"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "6.0.7",
+    "@module-federation/nextjs-mf": "6.1.1",
+    "@module-federation/utilities": "1.3.0",
     "lodash": "4.17.21",
-    "next": "12.2.2",
+    "next": "13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "webpack": "5.72.1",
-    "webpack-merge": "^5.8.0"
+    "webpack": "5.72.1"
   }
 }
