--- a/.github/workflows/on-workflow-run.yml
+++ b/.github/workflows/on-workflow-run.yml
@@ -21,10 +21,33 @@ jobs:
         with:
           access_token: ${{ secrets.GITHUB_TOKEN }}
 
+  check-if-allure-artifacts-exist:
+    runs-on: ubuntu-22.04
+    needs: stop-previous-run
+    outputs:
+      artifacts-exist: ${{ steps.check-artifacts-exist.outputs.artifacts-exist }}
+    steps:
+      - name: Check if allure artifacts exist
+        id: check-artifacts-exist
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const artifacts = await github.rest.actions.listWorkflowRunArtifacts({
+               owner: context.repo.owner,
+               repo: context.repo.repo,
+               run_id: ${{github.event.workflow_run.id }}
+            });
+            const matchArtifact = artifacts.data.artifacts.find(artifact => artifact.name === 'allure-results');
+            if (!matchArtifact) {
+              core.setOutput('artifacts-exist', 'false');
+            } else {
+              core.setOutput('artifacts-exist', 'true');
+            }
+
   generate-allure-report:
     runs-on: ubuntu-22.04
-    if: always()
-    needs: stop-previous-run
+    needs: check-if-allure-artifacts-exist
+    if: ${{ needs.check-if-allure-artifacts-exist.outputs.artifacts-exist != 'false' }}
     steps:
       - name: Dowload artifacts
         uses: actions/github-script@v6
@@ -63,7 +86,7 @@ jobs:
         with:
           allure_results: ./
           allure_history: allure-history
-          keep_reports: 20
+          keep_reports: 30
 
       - name: Deploy report to Github Pages
         if: always()
@@ -77,8 +100,7 @@ jobs:
   comment-to-pr:
     runs-on: ubuntu-22.04
     needs: generate-allure-report
-    if: >
-      github.event.workflow_run.event == 'pull_request'
+    if: always() && github.event.workflow_run.event == 'pull_request'
     steps:
       - name: 'Download artifact'
         uses: actions/github-script@v6
@@ -101,16 +123,21 @@ jobs:
             });
             const fs = require('fs');
             fs.writeFileSync('${{github.workspace}}/env_for_comment.zip', Buffer.from(download.data));
-      - run: unzip env_for_comment.zip
+      - run: |
+          unzip env_for_comment.zip
+          echo ${{ needs.generate-allure-report.result }}
 
-      - name: 'Comment to PR -- if success'
-        if: github.event.workflow_run.conclusion == 'success'
+      - name: 'Comment to PR -- if report generated'
+        if: needs.generate-allure-report.result == 'success'
         uses: actions/github-script@v6
+        env:
+          WORKFLOW_CONCLUSION: ${{ github.event.workflow_run.conclusion }}
         with:
           script: |
             const fs = require('fs');
             const issue_number = Number(fs.readFileSync('./prNum'));
             const runNumber = process.env.RUN_NUMBER;
+            const conclusion = process.env.WORKFLOW_CONCLUSION;
             const runId = Number(fs.readFileSync('./runId'));
             const repoFullName = fs.readFileSync('./repoFullName');
             const ownerName = fs.readFileSync('./ownerName');
@@ -120,17 +147,20 @@ jobs:
               issue_number: issue_number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: 'All tests are passed ✅ \n Checkout tests results here: <a href="' + githubPagesLink + runNumber + '">Cypress e2e Test Report</a> \n Link to GitHub workflow: <a href="' + githubRunLink + '">Github Workflow Link</a> \n Take care of yourself and have a great day! 🌞 \n❕Note: Report deployment may take up to 5 minutes.'
+              body: `Workflow status is ${conclusion === 'success'? conclusion + ' \u2705' : conclusion + ' \u274C'} \n Checkout tests results here: <a href="${githubPagesLink}${runNumber}">Cypress e2e Test Report</a> \n Link to GitHub workflow: <a href="${githubRunLink}">Github Workflow Link</a> \n❕Note: Report deployment may take up to 10 minutes.`
             })
 
-      - name: 'Comment to PR -- if failed'
-        if: github.event.workflow_run.conclusion == 'failure'
+      - name: 'Comment to PR -- if report wasnt generated'
+        if: needs.generate-allure-report.result == 'skipped'
         uses: actions/github-script@v6
+        env:
+          WORKFLOW_CONCLUSION: ${{ github.event.workflow_run.conclusion }}
         with:
           script: |
             const fs = require('fs');
             const issue_number = Number(fs.readFileSync('./prNum'));
             const runNumber = process.env.RUN_NUMBER;
+            const conclusion = process.env.WORKFLOW_CONCLUSION;
             const runId = Number(fs.readFileSync('./runId'));
             const repoFullName = fs.readFileSync('./repoFullName');
             const ownerName = fs.readFileSync('./ownerName');
@@ -140,73 +170,41 @@ jobs:
               issue_number: issue_number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: 'Workflow is failed ❌ \n Test might not start, so please chekout workflow first \n Link to GitHub workflow: <a href="' + githubRunLink + '">Github Workflow Link</a> \n Checkout tests results here: <a href="' + githubPagesLink + runNumber + '">Cypress e2e Test Report</a> \n Take care of yourself and have a great day! 🌞 \n❕Note: Report deployment may take up to 5 minutes.'
+              body: `Workflow status is ${conclusion === 'success'? conclusion + ' \u2705' : conclusion === 'cancelled'? conclusion + ' \u2757' : conclusion + ' \u274C'} \n Unfortunately test report wasn't generated, it can be if no workspaces changed. Please check the workflow run below. \n Link to GitHub workflow: <a href="${githubRunLink}">Github Workflow Link</a>`
             })
 
-      - name: 'Comment to PR -- if cancelled'
-        if: github.event.workflow_run.conclusion == 'cancelled'
+      - name: 'Add e2e label to PR -- if report generated'
+        if: needs.generate-allure-report.result == 'success'
         uses: actions/github-script@v6
-        with:
-          script: |
-            const fs = require('fs');
-            const issue_number = Number(fs.readFileSync('./prNum'));
-            const runNumber = process.env.RUN_NUMBER;
-            const runId = Number(fs.readFileSync('./runId'));
-            const repoFullName = fs.readFileSync('./repoFullName');
-            const ownerName = fs.readFileSync('./ownerName');
-            const githubPagesLink = 'https://' + ownerName.toString().toLowerCase().trim() + '.github.io/' + String(repoFullName).replace(`${ownerName.toString().trim()}/`, '') + '/';
-            const githubRunLink = 'https://github.com/' + repoFullName + '/actions/runs/' + runId;
-            github.rest.issues.createComment({
-              issue_number: issue_number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: 'Workflow is cancelled 🚫 \n Test might not start, so please chekout workflow first \n Link to GitHub workflow: <a href="' + githubRunLink + '">Github Workflow Link</a> \n Checkout tests results: <a href="' + githubPagesLink + runNumber + '">Cypress e2e Test Report</a> \n Take care of yourself and have a great day! 🌞 \n❕Note: Report deployment may take up to 5 minutes.'
-            })
-
-      - name: 'Add label to PR -- if success'
-        if: github.event.workflow_run.conclusion == 'success'
-        uses: actions/github-script@v6
+        env:
+          WORKFLOW_CONCLUSION: ${{ github.event.workflow_run.conclusion }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const fs = require('fs');
             const issue_number = Number(fs.readFileSync('./prNum'));
-            const runNumber = process.env.RUN_NUMBER;
+            const conclusion = process.env.WORKFLOW_CONCLUSION;
             github.rest.issues.addLabels({
               issue_number: issue_number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              labels: ['e2e-success']
+              labels: [`e2e-${conclusion}`]
             })
 
-      - name: 'Add label to PR -- if failed'
-        if: github.event.workflow_run.conclusion == 'failure'
+      - name: 'Add workflow label to PR'
+        if: always()
         uses: actions/github-script@v6
+        env:
+          WORKFLOW_CONCLUSION: ${{ github.event.workflow_run.conclusion }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const fs = require('fs');
             const issue_number = Number(fs.readFileSync('./prNum'));
-            const runNumber = process.env.RUN_NUMBER;
+            const conclusion = process.env.WORKFLOW_CONCLUSION;
             github.rest.issues.addLabels({
               issue_number: issue_number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              labels: ['e2e-failure']
-            })
-
-      - name: 'Add label to PR -- if cancelled'
-        if: github.event.workflow_run.conclusion == 'cancelled'
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const fs = require('fs');
-            const issue_number = Number(fs.readFileSync('./prNum'));
-            const runNumber = process.env.RUN_NUMBER;
-            github.rest.issues.addLabels({
-              issue_number: issue_number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              labels: ['e2e-cancelled']
+              labels: [`workflow-${conclusion}`]
             })
