--- a/rollup-federation-demo/rs-sidecar/package.json
+++ b/rollup-federation-demo/rs-sidecar/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wp5-starter-react",
+  "name": "rollup-federation-demo_wp5-starter-react",
   "version": "1.0.0",
   "scripts": {
     "build": "webpack --mode production",
