--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
       "./react-nested-routers/*",
       "./react-nextjs/nextjs-host-react-remote",
       "./react-nextjs/nextjs-host-react-remote/*",
+      "./react-nextjs/react-host-nextjs-remote",
+      "./react-nextjs/react-host-nextjs-remote/*",
       "./react-nextjs/react-host-remote",
       "./react-nextjs/react-host-remote/*",
       "./redux-reducer-injection",
