--- a/react-nextjs/react-host-nextjs-remote/package.json
+++ b/react-nextjs/react-host-nextjs-remote/package.json
@@ -9,7 +9,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"cd host; npm run dev\" \"cd remote; npm run dev\""
+    "start": "concurrently \"cd host; npm run dev\" \"cd remote; npm run dev\"",
+    "e2e:ci": "yarn start & wait-on http-get://localhost:8080/ && npx cypress run --config-file ../../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "author": "Omher",
   "license": "ISC",
