--- a/rollup-federation-demo/package.json
+++ b/rollup-federation-demo/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "rollup-federation-demo",
   "private": true,
   "workspaces": {
     "packages": [
@@ -8,9 +9,11 @@
     ]
   },
   "scripts": {
-    "start": "concurrently 'yarn --cwd rollup-spa start' 'yarn --cwd rs-sidecar start;' 'yarn --cwd webpack-spa start'"
+    "start": "lerna run --scope=rollup-federation-demo_* start",
+    "e2e:ci": "yarn start & wait-on http-get://localhost:8082/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
-    "concurrently": "7.3.0"
+    "concurrently": "7.3.0",
+    "lerna": "^6.4.1"
   }
 }
