--- a/vite-react-microfrontends/package.json
+++ b/vite-react-microfrontends/package.json
@@ -9,6 +9,7 @@
 	"description": "Vite + Module Federation is now possible",
 	"main": "index.js",
 	"scripts": {
+		"install": "npm run install:deps",
 		"install:deps": "npm --prefix ./host install && npm --prefix ./remote install",
 		"postinstall:deps": "npm --prefix ./host run build && npm --prefix ./remote run build",
 		"serve:host": "npm --prefix ./host run dev",
