--- a/vite-react-microfrontends/package.json
+++ b/vite-react-microfrontends/package.json
@@ -18,7 +18,7 @@
 		"preview:host": "npm --prefix ./host run preview",
 		"preview:remote": "npm --prefix ./remote run preview",
 		"e2e:test": "npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll*.cy.ts\" --browser=chrome",
-		"e2e:ci": "concurrently \"yarn serve:remote\" \"yarn serve:host\" \"yarn e2e:test\""
+		"e2e:ci": "concurrently --kill-others \"yarn serve:remote\" \"yarn serve:host\" \"yarn e2e:test\""
 	},
 	"author": {
 		"name": "Giorgio Boa",
