--- a/vite-react-microfrontends/package.json
+++ b/vite-react-microfrontends/package.json
@@ -17,7 +17,8 @@
 		"build:remote": "npm --prefix ./remote run build",
 		"preview:host": "npm --prefix ./host run preview",
 		"preview:remote": "npm --prefix ./remote run preview",
-		"e2e:ci": "yarn preview:remote & yarn preview:host & wait-on http-get://localhost:4174/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll*.cy.ts\" --browser=chrome"
+		"e2e:test": "npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll*.cy.ts\" --browser=chrome",
+		"e2e:ci": "node e2e.ci.js"
 	},
 	"author": {
 		"name": "Giorgio Boa",
@@ -26,6 +27,7 @@
 	},
 	"license": "ISC",
 	"devDependencies": {
+		"concurrently": "7.3.0",
 		"wait-on": "7.0.1"
 	}
 }
