--- a/angular15-vue3/vue-remote/package.json
+++ b/angular15-vue3/vue-remote/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 4201",
     "build": "vue-cli-service build"
   },
   "dependencies": {
