--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
       "./angular14-react",
       "./angular14-react/*",
       "./angular15-microfrontends-lazy-components",
+      "./angular15-vue3",
       "./basic-host-remote",
       "./basic-host-remote/*",
       "./bi-directional",
