--- a/angular15-vue3/package.json
+++ b/angular15-vue3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular15-microfrontends-lazy-components",
+  "name": "angular15-vue3",
   "private": true,
   "workspaces": [
     "shell"
