fix yarn install

--- a/angular15-vue3/package.json
+++ b/angular15-vue3/package.json
@@ -2,7 +2,8 @@
   "name": "angular15-vue3",
   "private": true,
   "workspaces": [
-    "shell"
+    "shell",
+    "vue-remote"
   ],
   "version": "0.0.0",
   "scripts": {
