--- a/angular15-vue3/vue-remote/package.json
+++ b/angular15-vue3/vue-remote/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-demo",
+  "name": "vue-remote",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,7 +7,6 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@angular/elements": "^12.2.17",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
