--- a/angular-universal-ssr/host-app/package.json
+++ b/angular-universal-ssr/host-app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "angular-universal-ssr_host-app",
   "version": "0.0.0",
+  "type": "commonjs",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -9,42 +10,42 @@
     "lint": "ng lint",
     "dev:ssr": "ng run host-app:serve-ssr",
     "serve:ssr": "node dist/host-app/server/main.js",
-    "build:ssr": "ng build --prod && ng run host-app:server:production",
+    "build:ssr": "ng build --configuration production && ng run host-app:server:production",
     "build:federation": "webpack",
     "serve:federation": "node dist/server/main.js",
     "clean": "rm -rf dist"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.2.0",
-    "@angular/common": "~10.2.0",
-    "@angular/compiler": "~10.2.0",
-    "@angular/core": "~10.2.0",
-    "@angular/forms": "~10.2.0",
-    "@angular/platform-browser": "~10.2.0",
-    "@angular/platform-browser-dynamic": "~10.2.0",
-    "@angular/platform-server": "~10.2.0",
-    "@angular/router": "~10.2.0",
-    "@nguniversal/express-engine": "^10.0.1",
-    "express": "^4.15.2",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.0"
+    "@angular/animations": "^15.1.2",
+    "@angular/common": "^15.1.2",
+    "@angular/compiler": "^15.1.2",
+    "@angular/core": "^15.1.2",
+    "@angular/forms": "^15.1.2",
+    "@angular/platform-browser": "^15.1.2",
+    "@angular/platform-browser-dynamic": "^15.1.2",
+    "@angular/platform-server": "^15.1.2",
+    "@angular/router": "^15.1.2",
+    "@nguniversal/express-engine": "^15.1.0",
+    "express": "^4.17.3",
+    "rxjs": "^7.8.0",
+    "tslib": "^2.5.0",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.19",
-    "@angular/cli": "10.2.4",
-    "@angular/compiler-cli": "10.2.5",
-    "@ngtools/webpack": "file:../patched_packages/_ngtools_webpack.tgz",
-    "@nguniversal/builders": "9.1.1",
+    "@angular-devkit/build-angular": "15.1.4",
+    "@angular/cli": "15.1.4",
+    "@angular/compiler-cli": "15.1.2",
+    "@ngtools/webpack": "15.1.4",
+    "@nguniversal/builders": "15.1.0",
     "clean-webpack-plugin": "4.0.0",
     "html-webpack-plugin": "5.5.0",
     "raw-loader": "4.0.2",
-    "sass-loader": "12.6.0",
-    "ts-node": "9.1.1",
-    "tslint": "6.1.3",
-    "typescript": "4.0.8",
-    "webpack": "5.72.1",
-    "webpack-cli": "4.10.0"
+    "sass-loader": "13.2.0",
+    "ts-node": "10.9.1",
+    "tslint": "^6.1.3",
+    "typescript": "4.9.5",
+    "webpack": "5.75.0",
+    "webpack-cli": "5.0.1"
   }
 }
