--- a/angular-universal-ssr/client-app/package.json
+++ b/angular-universal-ssr/client-app/package.json
@@ -2,45 +2,46 @@
   "name": "angular-universal-ssr_client-app",
   "version": "0.0.0",
   "scripts": {
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "serve:federation": "serve dist -l 5000 -s",
+    "serve:federation": "serve dist -l 3000 -s",
     "build:federation": "webpack",
     "clean": "rm -rf dist"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.2.0",
-    "@angular/common": "~10.2.0",
-    "@angular/compiler": "~10.2.0",
-    "@angular/core": "~10.2.0",
-    "@angular/forms": "~10.2.0",
-    "@angular/platform-browser": "~10.2.0",
-    "@angular/platform-browser-dynamic": "~10.2.0",
-    "@angular/router": "~10.2.0",
-    "rxjs": "~6.6.0",
-    "serve": "^13.0.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.0"
+    "@angular/animations": "^15.1.2",
+    "@angular/common": "^15.1.2",
+    "@angular/compiler": "^15.1.2",
+    "@angular/core": "^15.1.2",
+    "@angular/forms": "^15.1.2",
+    "@angular/platform-browser": "^15.1.2",
+    "@angular/platform-browser-dynamic": "^15.1.2",
+    "@angular/router": "^15.1.2",
+    "rxjs": "^7.8.0",
+    "serve": "^14.2.0",
+    "tslib": "^2.5.0",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@ngtools/webpack": "file:../patched_packages/_ngtools_webpack.tgz",
-    "@angular-devkit/build-angular": "0.1102.19",
-    "@angular/cli": "10.2.4",
-    "@angular/compiler-cli": "10.2.5",
-    "@types/node": "12.20.55",
+    "@ngtools/webpack": "15.1.4",
+    "@angular-devkit/build-angular": "15.1.4",
+    "@angular/cli": "15.1.4",
+    "@angular/compiler-cli": "15.1.2",
+    "@types/node": "18.11.9",
     "clean-webpack-plugin": "4.0.0",
     "html-webpack-plugin": "5.5.0",
     "raw-loader": "4.0.2",
-    "sass-loader": "12.6.0",
-    "ts-node": "9.1.1",
-    "tslint": "6.1.3",
-    "typescript": "4.0.8",
-    "webpack": "5.72.1",
-    "webpack-cli": "4.10.0"
+    "sass-loader": "13.2.0",
+    "ts-node": "10.9.1",
+    "tslint": "^6.1.3",
+    "typescript": "4.9.5",
+    "webpack": "5.75.0",
+    "webpack-cli": "5.0.1"
   }
 }
