--- a/medusa-nx-native-federation-example/packages/dsl/project.json
+++ b/medusa-nx-native-federation-example/packages/dsl/project.json
@@ -13,6 +13,11 @@
           "packages/dsl/src/assets",
           "packages/dsl/src/favicon.ico"
         ]
+      },
+      "configurations": {
+        "production": {
+          "dev": false
+        }
       }
     },
     "serve": {
@@ -21,17 +26,23 @@
         "buildTarget": "dsl:build",
         "port": 3002,
         "watch": true
+      },
+      "configurations": {
+        "production": {
+          "buildTarget": "dsl:build:production"
+        }
       }
     },
     "dashboard": {
       "executor": "native-federation-plugin:dashboard",
       "options": {
-        "buildTarget": "dsl:build",
+        "buildTarget": "dsl:build:production",
         "tokenFile": ".env",
         "environment": "development",
         "versionStrategy": "Date",
         "filename": "dashboard.json",
-        "dashboardUrl": "{DASHBOARD_BASE_URL}/update?token={DASHBOARD_WRITE_TOKEN}",
+        "writeUrl": "{DASHBOARD_BASE_URL}/update?token={DASHBOARD_WRITE_TOKEN}",
+        "readUrl": "{DASHBOARD_BASE_URL}/env/{ENVIRONMENT}/get-remote?token={DASHBOARD_READ_TOKEN}",
         "metadata": {
           "baseUrl": "http://localhost:3002",
           "source": {
