--- a/medusa-nx-native-federation-example/packages/nav/project.json
+++ b/medusa-nx-native-federation-example/packages/nav/project.json
@@ -12,7 +12,17 @@
         "assets": [
           "packages/nav/src/assets",
           "packages/nav/src/favicon.ico"
+        ],
+        "remotes": [
+          "dsl",
+          "search",
+          "utils"
         ]
+      },
+      "configurations": {
+        "production": {
+          "dev": false
+        }
       }
     },
     "serve": {
@@ -21,17 +31,23 @@
         "buildTarget": "nav:build",
         "port": 3003,
         "watch": true
+      },
+      "configurations": {
+        "production": {
+          "buildTarget": "nav:build:production"
+        }
       }
     },
     "dashboard": {
       "executor": "native-federation-plugin:dashboard",
       "options": {
-        "buildTarget": "nav:build",
+        "buildTarget": "nav:build:production",
         "tokenFile": ".env",
         "environment": "development",
         "versionStrategy": "Date",
         "filename": "dashboard.json",
-        "dashboardUrl": "{DASHBOARD_BASE_URL}/update?token={DASHBOARD_WRITE_TOKEN}",
+        "writeUrl": "{DASHBOARD_BASE_URL}/update?token={DASHBOARD_WRITE_TOKEN}",
+        "readUrl": "{DASHBOARD_BASE_URL}/env/{ENVIRONMENT}/get-remote?token={DASHBOARD_READ_TOKEN}",
         "metadata": {
           "baseUrl": "http://localhost:3003",
           "source": {
