--- a/apollo-client/app2/package.json
+++ b/apollo-client/app2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-18-code-splitting/app2",
+  "name": "@apollo-client/app2",
   "version": "0.0.0",
   "scripts": {
     "start": "yarn build && yarn serve",
