--- a/.github/workflows/on-workflow-run.yml
+++ b/.github/workflows/on-workflow-run.yml
@@ -1,7 +1,4 @@
 name: on workflow run
-
-# read-write repo token
-# access to secrets
 on:
   workflow_run:
     workflows: ["on pull request"]
@@ -97,8 +94,8 @@ jobs:
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history
 
-  # Comment to PR
-  comment-to-pr:
+  # Comment to PR, Add labels to PR, Remove unnecessary labels
+  actions-with-pr:
     runs-on: ubuntu-22.04
     needs: generate-allure-report
     if: always() && github.event.workflow_run.event == 'pull_request'
@@ -177,18 +174,26 @@ jobs:
       - name: Remove old lables
         if: always()
         uses: actions/github-script@v6
+        env:
+          WORKFLOW_CONCLUSION: ${{ github.event.workflow_run.conclusion }}
+          GENERAT_ALLURE_REPORT_STATUS: ${{ needs.generate-allure-report.result }}
         with:
           script: |
             const fs = require('fs');
             const issue_number = Number(fs.readFileSync('./prNum'));
+            const conclusion = process.env.WORKFLOW_CONCLUSION;
+            const generateAllureReportStatus = process.env.GENERAT_ALLURE_REPORT_STATUS;
             const labels = await github.rest.issues.listLabelsOnIssue({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: issue_number
             });
-            if (labels.data) {
-              for (let i = 0; i < labels.data.length; i++) {
-                const label = labels.data[i];
+            if (labels) {
+            for (const label of labels.data) {
+                if ((label.name == `e2e-${conclusion}` && generateAllureReportStatus == 'success') || label.name == `workflow-${conclusion}`) {
+                  console.log(`Label ${label.name} already exists`);
+                  continue;
+                }
                 if (label.name.startsWith("workflow-") || label.name.startsWith("e2e-")) {
                   await github.rest.issues.removeLabel({
                     owner: context.repo.owner,
