--- a/nextjs-ssr-medusa/checkout/package.json
+++ b/nextjs-ssr-medusa/checkout/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && node ./send-to-medusa.js",
     "start": "NODE_ENV=production next start"
   },
   "dependencies": {
