--- a/nextjs-ssr-medusa/package.json
+++ b/nextjs-ssr-medusa/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^7.0.0"
   },
   "resolutions": {
-    "@module-federation/dashboard-plugin": "file:./module-federation-dashboard-plugin-v2.7.2.tgz"
+    "@module-federation/dashboard-plugin": "file:./module-federation-dashboard-plugin-v2.7.2.tgz",
+    "@module-federation/nextjs-mf": "file:./module-federation-nextjs-mf-v6.1.3.tgz"
   }
 }
