--- a/nextjs-ssr-medusa/home/package.json
+++ b/nextjs-ssr-medusa/home/package.json
@@ -8,8 +8,8 @@
     "start": "NODE_ENV=production next start -p 3001"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "6.0.7",
-    "@module-federation/dashboard-plugin": "^2.7.2",
+    "@module-federation/nextjs-mf": "file:../module-federation-nextjs-mf-v6.1.3.tgz",
+    "@module-federation/dashboard-plugin": "file:../module-federation-dashboard-plugin-v2.8.2.tgz",
     "lodash": "4.17.21",
     "next": "12.2.2",
     "react": "^18.2.0",
