--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -4,6 +4,26 @@ on:
     branches:
       - master
 
+env:
+  CACHE_PATH: |
+    **/node_modules
+    ~/.cache/Cypress
+    ~/.cache/yarn/v6
+  FILES_TO_DELETE: |
+    sudo rm -rf "/usr/share/dotnet"
+    sudo rm -rf "/usr/share/swift"
+    sudo rm -rf "/usr/local/share/boost"
+    sudo rm -rf /opt/ghc
+    sudo rm -rf "/usr/local/share/boost"
+    sudo rm -rf "/usr/local/lib/android/sdk"
+    sudo rm -rf "/opt/hostedtoolcache/Python"
+    sudo rm -rf "/opt/hostedtoolcache/go"
+    sudo rm -rf "/opt/hostedtoolcache/CodeQL"
+    sudo rm -rf "/var/lib/gems"
+    sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+    sudo apt-get clean -y
+    sudo apt-get autoremove -y
+
 jobs:
 
   # Stop previous runs
@@ -29,6 +49,9 @@ jobs:
           ref: ${{ github.event.pull_request.head.ref }}
           fetch-depth: 0
 
+      - name: Free up some space
+        run: ${{ env.FILES_TO_DELETE }}
+
         # Hash yarn.lock files to use it as a cache key, if yarn.lock files are changed, the cache will be invalidated
       - name: Check Yarn hash
         id: yarn-hash
@@ -40,10 +63,7 @@ jobs:
         uses: actions/cache@v3
         id: yarn-cache
         with:
-          path: |
-            **/node_modules
-            ~/.cache/Cypress
-            ~/.cache/yarn/v6  
+          path: ${{ env.CACHE_PATH }}  
           key: e2e-cache-${{ steps.yarn-hash.outputs.yarnHash }}
 
       - name: Install deps
