--- a/react-16-17-18-ssr-with-adapters/remote2/package.json
+++ b/react-16-17-18-ssr-with-adapters/remote2/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-version-adapter": "0.1.0",
+    "react-version-adapter": "https://github.com/brunos3d/react-version-adapter.git",
     "regenerator-runtime": "0.13.2"
   },
   "devDependencies": {
