chore: add nextjs-ssr-react-query to workspace list

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
       "./nextjs-react/*",
       "./nextjs-ssr",
       "./nextjs-ssr/*",
+      "./nextjs-ssr-react-query",
       "./react-hmr",
       "./react-hmr/*",
       "./react-in-vue",
