feat/add nextjs react query sample (#2805)

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
       "./nextjs-sidecar/*",
       "./nextjs-ssr",
       "./nextjs-ssr/*",
+      "./nextjs-ssr-react-query",
       "./react-16-17-18-ssr",
       "./react-18-code-splitting",
       "./react-18-server-2-server",
