update medusa example

--- a/nextjs-ssr-medusa/checkout/package.json
+++ b/nextjs-ssr-medusa/checkout/package.json
@@ -8,7 +8,7 @@
     "start": "NODE_ENV=production next start"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "file:../module-federation-nextjs-mf-v6.1.555.tgz",
+    "@module-federation/nextjs-mf": "6.2.0",
     "@module-federation/dashboard-plugin": "file:../module-federation-dashboard-plugin-v2.8.3.tgz",
     "lodash": "4.17.21",
     "next": "12.2.2",
