add react 18 sample and diff react version to ci

--- a/different-react-versions-typescript/app1/package.json
+++ b/different-react-versions-typescript/app1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@different-react-versions-typescript/app1",
+  "name": "different-react-versions-typescript_app1",
   "version": "0.0.0",
   "private": true,
   "scripts": {
