--- a/different-react-versions-typescript/app2/package.json
+++ b/different-react-versions-typescript/app2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@different-react-versions-typescript/app2",
+  "name": "different-react-versions-typescript_app2",
   "version": "0.0.0",
   "private": true,
   "scripts": {
