--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
       "./different-react-versions-16-18",
       "./different-react-versions-isolated",
       "./different-react-versions-isolated/*",
+      "./different-react-versions-typescript",
       "./different-react-versions-typescript/*",
       "./different-react-versions",
       "./different-react-versions/*",
@@ -82,6 +83,7 @@
       "./nextjs-ssr-react-query",
       "./react-16-17-18-ssr",
       "./react-18-code-splitting",
+      "./react-18-code-splitting/*",
       "./react-18-server-2-server",
       "./react-18-ssr",
       "./react-hmr",
