--- a/react-18-code-splitting/app1/package.json
+++ b/react-18-code-splitting/app1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-18-code-splitting/app1",
+  "name": "react-18-code-splitting_app1",
   "version": "0.0.0",
   "scripts": {
     "start": "yarn build && yarn serve",
