--- a/react-18-code-splitting/app2/package.json
+++ b/react-18-code-splitting/app2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-18-code-splitting/app2",
+  "name": "react-18-code-splitting_app2",
   "version": "0.0.0",
   "scripts": {
     "start": "yarn build && yarn serve",
