--- a/different-react-versions-typescript/package.json
+++ b/different-react-versions-typescript/package.json
@@ -8,10 +8,11 @@
     ]
   },
   "scripts": {
-    "start": "lerna run --parallel start",
-    "build": "lerna run build",
-    "serve": "lerna run --parallel serve",
-    "clean": "lerna run --parallel clean"
+    "start": "lerna run --scope=different-react-versions-typescript_* --parallel start",
+    "build": "lerna run --scope=different-react-versions-typescript_* build",
+    "serve": "lerna run --scope=different-react-versions-typescript_* --parallel serve",
+    "clean": "lerna run --scope=different-react-versions-typescript_* --parallel clean",
+    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ &&  npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "lerna": "3.22.1"
