fix(dynamic-system-host): use @module-federation/utilities instead of getOrLoadRemote.js

--- a/dynamic-system-host/app1/package.json
+++ b/dynamic-system-host/app1/package.json
@@ -19,6 +19,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@module-federation/utilities": "^1.4.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
   }
