chore(deps): pin dependencies

--- a/angular14-react/angular-profile/package.json
+++ b/angular14-react/angular-profile/package.json
@@ -37,7 +37,7 @@
     "@angular-devkit/build-angular": "^14.2.2",
     "@angular/cli": "~14.2.2",
     "@angular/compiler-cli": "^14.2.0",
-    "@ngxs/devtools-plugin": "^3.7.5",
+    "@ngxs/devtools-plugin": "3.7.6",
     "@types/jasmine": "~4.3.0",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
