chore(deps): update dependency @softarc/native-federation-esbuild to v1.1.1

--- a/vite-svelte-microfrontends/host/package.json
+++ b/vite-svelte-microfrontends/host/package.json
@@ -12,7 +12,7 @@
 	"devDependencies": {
 		"@module-federation/vite": "^0.2.6",
 		"@softarc/native-federation": "^1.0.3",
-		"@softarc/native-federation-esbuild": "^1.1.0",
+		"@softarc/native-federation-esbuild": "1.1.1",
 		"@sveltejs/vite-plugin-svelte": "2.0.3",
 		"@tsconfig/svelte": "^3.0.0",
 		"esbuild": "^0.16.7",
