--- a/vite-react-microfrontends/remote/package.json
+++ b/vite-react-microfrontends/remote/package.json
@@ -15,7 +15,7 @@
 	"devDependencies": {
 		"@module-federation/vite": "^0.2.6",
 		"@softarc/native-federation": "^1.1.0",
-		"@softarc/native-federation-esbuild": "^1.1.0",
+		"@softarc/native-federation-esbuild": "1.1.1",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.10",
 		"@vitejs/plugin-react": "^3.1.0",
