--- a/vite-vue-microfrontends/remote/package.json
+++ b/vite-vue-microfrontends/remote/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "@module-federation/vite": "^0.2.6",
     "@rushstack/eslint-patch": "^1.1.4",
-    "@softarc/native-federation-esbuild": "^1.1.0",
+    "@softarc/native-federation-esbuild": "1.1.1",
     "@types/node": "^18.11.12",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "3.0.1",
