add loadable react 18 to ci

--- a/package.json
+++ b/package.json
@@ -68,10 +68,9 @@
       "./genesis/*",
       "./loadable-react-16",
       "./loadable-react-18",
+      "./loadable-react-18/*",
       "./loadable-react-spectrum",
       "./loadable",
-      "./native-federation-react",
-      "./native-federation-react/*",
       "./nested",
       "./nested/*",
       "./nextjs-bi-directional/*",
