--- a/loadable-react-18/app1/package.json
+++ b/loadable-react-18/app1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@loadable-mf/app1",
+  "name": "loadable-react-18_app1",
   "version": "0.0.0",
   "scripts": {
     "start": "yarn build && yarn serve",
