--- a/loadable-react-16/app2/package.json
+++ b/loadable-react-16/app2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@loadable-mf/app2",
+  "name": "loadable-react-16_app2",
   "version": "0.0.0",
   "scripts": {
     "start": "yarn build && yarn serve",
