--- a/package.json
+++ b/package.json
@@ -66,11 +66,11 @@
       "./genesis",
       "./genesis/*",
       "./loadable-react-16",
+      "./loadable-react-16/*",
       "./loadable-react-18",
+      "./loadable-react-18/*",
       "./loadable-react-spectrum",
       "./loadable",
-      "./native-federation-react",
-      "./native-federation-react/*",
       "./nested",
       "./nested/*",
       "./nextjs-bi-directional/*",
@@ -82,7 +82,9 @@
       "./nextjs-ssr-react-query",
       "./react-16-17-18-ssr",
       "./react-18-code-splitting",
+      "./react-18-code-splitting/*",
       "./react-18-server-2-server",
+      "./react-18-server-2-server/*",
       "./react-18-ssr",
       "./react-hmr",
       "./react-hmr/*",
