--- a/react-18-server-2-server/app1/package.json
+++ b/react-18-server-2-server/app1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@server2server/app1",
+  "name": "react-18-server-2-server_app1",
   "version": "0.0.0",
   "scripts": {
     "start": "yarn build && yarn serve",
