--- a/react-18-server-2-server/app2/package.json
+++ b/react-18-server-2-server/app2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@server2server/app2",
+  "name": "react-18-server-22server_app2",
   "version": "0.0.0",
   "scripts": {
     "start": "yarn build && yarn serve",
