--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
       "./loadable",
       "./native-federation-react",
       "./native-federation-react/*",
+      "./native-federation-tests-typescript-plugins",
+      "./native-federation-tests-typescript-plugins/*",
       "./nested",
       "./nested/*",
       "./nextjs-bi-directional/*",
