feat: add basic modernjs demo

--- a/package.json
+++ b/package.json
@@ -142,7 +142,9 @@
       "./vue3-demo-federation-with-vite",
       "./vue3-demo-federation-with-vite/*",
       "./vue3-demo",
-      "./vue3-demo/*"
+      "./vue3-demo/*",
+      "./modernjs",
+      "./modernjs/*"
     ],
     "nohoist": [
       "**/@types",
