feat: add modernjs with medusa demo

--- a/package.json
+++ b/package.json
@@ -144,7 +144,9 @@
       "./vue3-demo",
       "./vue3-demo/*",
       "./modernjs",
-      "./modernjs/*"
+      "./modernjs/*",
+      "./modernjs-medusa",
+      "./modernjs-medusa/*"
     ],
     "nohoist": [
       "**/@types",
