feat: add modernjs demo (#2961)
* feat: add basic modernjs demo

* feat: add modernjs with medusa demo

* chore: add readme and lock file

* chore: update lock file

* chore: translate README

---------

Co-authored-by: zhanghang.heal <zhanghang.heal@bytedance.com>

--- a/package.json
+++ b/package.json
@@ -142,7 +142,11 @@
       "./vue3-demo-federation-with-vite",
       "./vue3-demo-federation-with-vite/*",
       "./vue3-demo",
-      "./vue3-demo/*"
+      "./vue3-demo/*",
+      "./modernjs",
+      "./modernjs/*",
+      "./modernjs-medusa",
+      "./modernjs-medusa/*"
     ],
     "nohoist": [
       "**/@types",
